// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Icon Component correctly 1`] = `
<div
  className="sc-bdVaJa jQGYJy"
  color={undefined}
  scale={undefined}
>
  <i
    className="material-icons  sc-htpNat VYLmK"
    color={undefined}
    scale={undefined}
  >
    dashboard
  </i>
  <span
    className="sc-bwzfXH hrXnsj"
  >
    Test
  </span>
</div>
`;

exports[`renders the Icon Component correctly 2`] = `
<div
  className="sc-bdVaJa iHYzGI"
  color="error"
  scale="l"
>
  <i
    className="material-icons  sc-htpNat eqYdRJ"
    color={undefined}
    scale={undefined}
  >
    autorenew
  </i>
  <span
    className="sc-bwzfXH hrXnsj"
  >
    Test
  </span>
</div>
`;

exports[`renders the Icon Component correctly 3`] = `
<div
  className="sc-bdVaJa iHYzGI"
  color="error"
  scale="l"
>
  <span
    className="sc-bwzfXH kndBaX"
  >
    Test
  </span>
  <i
    className="material-icons  sc-htpNat VYLmK"
    color={undefined}
    scale={undefined}
  >
    dashboard
  </i>
</div>
`;
